# sprite-packer

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
src/: config.rs  errors.rs  file_processing.rs  image_processing.rs  main.rs  utils.rs
